--- a/date/2025-08/page-3.htm
+++ b/date/2025-08/page-3.htm
@@ -80,7 +80,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                                        <span>免费Clash SSR</span>
+                                                        <span>免费Clash SSR节点精选</span>
                                                         </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-153236.htm" title="天行科学上网全攻略：解锁网络自由与安全浏览的终极指南">天行科学上网全攻略：解锁网络自由与安全浏览的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
                         <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-144688.htm" title="突破网络藩篱：科学上网软件全攻略与深度解析">突破网络藩篱：科学上网软件全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-node-subscribe-links.htm" title="免费Clash SSR - 9月18日19M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 9月18日19M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
