--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -80,7 +80,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                                        <span>免费Clash SSR</span>
+                                                        <span>免费Clash SSR节点精选</span>
                                                         </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -137,6 +137,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-154332.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/68a9d6caab9c920ad9aa89cc7ae091b1.webp" alt="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-154332.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        深度解析：Shadowrocket无法连接的全面诊断与高效修复指南                                    </h3>
+                                </a>
+                                <p>引言：当代理工具成为数字生活的刚需  在全球化互联网生态中，网络代理工具早已从极客专属演变为大众刚需。作为iOS平台代理工具的标杆，Shadowrocket凭借其简洁界面与强大功能俘获了数百万用户。然</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-09">
+                            <div class="col-md-3">
+                                <a href="/news/article-153962.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/f6645139de73ca6b8872f0a29427a2f9.webp" alt="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-153962.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案                                    </h3>
+                                </a>
+                                <p>引言：当经典操作系统遇上现代代理工具  在互联网技术飞速发展的今天，CentOS 6这个曾经辉煌的操作系统已逐渐退出主流舞台。然而，在大量企业服务器、老旧硬件设备以及特定行业场景中，这个以稳定性著称的</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                            <div class="col-md-3">
+                                <a href="/news/article-153605.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-153605.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        苹果设备上的Vmess协议全攻略：从下载到配置的完整指南                                    </h3>
+                                </a>
+                                <p>在当今互联网环境中，隐私保护和网络自由成为越来越多用户的刚需。无论是为了突破地域限制访问全球资源，还是为了在公共网络中保护个人数据安全，一款可靠的代理工具都显得尤为重要。而Vmess协议凭借其出色的加</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                            <div class="col-md-3">
+                                <a href="/news/article-153236.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="天行科学上网全攻略：解锁网络自由与安全浏览的终极指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-153236.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        天行科学上网全攻略：解锁网络自由与安全浏览的终极指南                                    </h3>
+                                </a>
+                                <p>在当今高度互联的世界中，互联网已成为人们获取信息、交流思想的重要工具。然而，由于各种原因，许多地区的网络访问受到严格限制，这给用户的工作、学习和娱乐带来了诸多不便。科学上网作为一种突破网络限制的有效手</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-152871.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-152871.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南                                    </h3>
+                                </a>
+                                <p>引言：网络自由工具的进化之路  在当今数字时代，网络访问自由已成为刚需。面对复杂的网络环境，翻墙工具从最初的简单代理发展到如今的多协议支持、高安全性解决方案。大狗系列作为这一领域的代表产品，凭借其稳定</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                            <div class="col-md-3">
+                                <a href="/news/article-152508.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c94474226b24ec9caf8b44f650d14f51.webp" alt="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-152508.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置                                    </h3>
+                                </a>
+                                <p>在信息浪潮汹涌的数字时代，网络安全与个人隐私已成为现代人不可忽视的议题。随着全球互联网治理日趋复杂，越来越多的用户寻求技术手段以保护自身数据、突破地域限制并提升网络体验。在众多工具中，Clash作为一</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-04">
                             <div class="col-md-3">
                                 <a href="/news/article-152136.htm" class="xcblog-blog-url">
@@ -203,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-node-share-links.htm" title="免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
+                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
-                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
+                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -224,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
