--- a/privacy.htm
+++ b/privacy.htm
@@ -80,7 +80,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                                        <span>免费Clash SSR</span>
+                                                        <span>免费Clash SSR节点精选</span>
                                                         </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -189,16 +189,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-v2ray.htm" title="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-node-share-links.htm" title="免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-node-share-links.htm" title="免费Clash SSR - 9月20日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 9月20日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -210,7 +210,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
